<resources>
    <string name="app_name">FindClass</string>
    <string name="Map">FindClass</string>
    <string name="buildings1">buildings1</string>
    <string name="buildings2">buildings2</string>
    <string name="buildings3">buildings3</string>
    <string name="buildings4">buildings4</string>
    <string name="buildings5">buildings5</string>
    <string name="buildings6">buildings6</string>
    <string name="buildings7">buildings7</string>
    <string name="buildings8">buildings8</string>
    <string name="Buildings">Buildings</string>
    <string name="disconnected">You cant register with this email or password</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
    <string name="CreateNewAccount">Create a new account</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_greater_6">Password must be greater then 6 digit</string>
    <string name="login">Login</string>
    <string name="Login">Login</string>
    <string name="Login_Failed">Login Failed</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Chats">Chats</string>
    <string name="Users">Users</string>
    <string name="profile">profile</string>
    <string name="type_message">Type a meesage</string>
    <string name="uploading">Uploading...</string>
    <string name="seen">seen</string>
    <string name="Delivered">Delivered</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_explain">By clicking on reset ,You will recive a email with the new password</string>
    <string name="reset">Reset</string>
    <string name="New_Message">New Message</string>
    <string name="eror">Eror</string>
    <string name="Loging_please_wait...">Loging please wait...</string>
    <string name="building">"Building "</string>
    <string name="classes">Class</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="classof">Classes</string>
    <string name="verification">Check your Email for verification</string>
    <string name="guest">Enter as guest</string>
    <string name="must_login">You must login to open the class schedule</string>
    <string name="lector">By Lecturer</string>
    <string name="student">"By "</string>
    <string name="Reject_Request">Reject Your Request</string>
    <string name="Approved_Request">Approved Your Request</string>
    <string name="educational_institutions">Educational institution</string>
    <string name="hit">Holon Institute Technology</string>
    <string name="collegemanage">College of Management</string>
    <string name="onoacademic">Ono Academic</string>
    <string name="tlvacademic">Tel Aviv-Yafo Academic</string>
    <string name="sce">SCE</string>
    <string name="select_institute">You have to select an educational institution</string>
    <string name="schedule">Schedule</string>
    <string name="ofday">of</string>
    <string name="getclass">Get the class</string>
    <string name="logout">Log out</string>
    <string name="chat">Chat</string>
    <string name="must_login2">You must login for using the chat</string>
</resources>
