<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headline_schedule"
        android:background="@color/colorPrimary"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/schedule"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:id="@+id/class_num_tv"
            android:text="@string/classes"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:id="@+id/day_date_tv"
            android:text="@string/ofday"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:textSize="19sp"
            android:id="@+id/button_chat"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/btns_shape"
            android:text="@string/getclass"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_dialog"
        style="@android:style/Widget.Holo.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline_schedule"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headline_schedule"
        android:id="@+id/list_schedule"
        android:layout_marginTop="5dp"/>
</RelativeLayout>